# wether-app-2.0

./: README.MD
back-end/: .gitignore  database.py  fixtures.py  locales.json  locales.py  main.py  models.py  pyproject.toml  settings.py
front-end/: index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: App.tsx  index.scss  main.tsx  utils.ts  variables.scss
front-end/src/components/AnimatedMenuIcon/: index.tsx  styles.module.scss
front-end/src/components/Background/: index.tsx  styles.module.scss  utils.tsx
front-end/src/components/Button/: index.tsx  styles.module.scss
front-end/src/components/Card/: index.tsx  styles.module.scss
front-end/src/components/FormCardPage/: index.tsx  styles.module.scss  utils.ts
front-end/src/components/Header/: index.tsx  styles.module.scss
front-end/src/components/Icons/: icon.tsx
front-end/src/components/Input/: index.tsx  styles.module.scss
front-end/src/components/LocaleCard/: index.tsx  styles.module.scss
front-end/src/components/Logo/: index.tsx  styles.module.scss
front-end/src/components/SearchInput/: index.tsx  styles.module.scss
front-end/src/components/Separator/: index.tsx  styles.module.scss
front-end/src/components/Weather/: index.tsx  styles.module.scss
front-end/src/components/WeatherDetailCard/: index.tsx  styles.module.scss
front-end/src/components/WeatherHourlyCard/: index.tsx  styles.module.scss
front-end/src/components/navMenu/: index.tsx  (+1 more)
front-end/src/hooks/: useClasses.ts
front-end/src/store/: root-reducer.ts  store.ts
front-end/src/types/: weather.ts
(+9 files in other folders)
