[tool.poetry]
name = "weather-app-2-0"
version = "0.1.0"
description = ""
authors = ["Ihor Drahushchak <dragushhakigor@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_app_2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
